# desafioAeC-desenho-planta

./: .AmbienteBuilder.py.swp  .AmbienteBuilder_BASE_327.py.swp  .AmbienteBuilder_LOCAL_327.py.swp  .AmbienteBuilder_REMOTE_327.py.swp  .gitignore  Agents.py  AmbienteBuilder.py  AmbienteBuilder_BACKUP_327.py  BlockMapper.py  CapacityValidator.py  InventoryReconciler.py  LLM.py  LayoutEngine.py  PlantGraph.py  PremiseNormalizer.py  Prompts.py  ScannerPremissas.py  main.py  mapa_reduzido.py  mapa_reduzido.txt  planta.xlsx  planta_teste_dois_ambientes.xlsx  planta_teste_sala.xlsx  premissas.txt  pyproject.toml  test.py  test_blocos_enriquecidos.py  test_dois_ambientes.py  test_extracao.py  test_multi_ambiente_mesmo_bloco.py
tests/: test_business_rules.py
