[project]
name = "desafioaec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.107.0",
    "pydantic-ai-slim[bedrock]>=1.107.0",
    "python-dotenv>=1.2.2",
]
